# maybenot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build-and-test.yml  linting.yml
benches/: Cargo.toml  README.md
benches/benches/: dists.rs  lookup_bench.rs  rng.rs
crates/maybenot/: CHANGELOG.md  Cargo.toml  README.md
crates/maybenot-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/maybenot-cli/examples/: 10-padding-defenses.def  derive-seed-42.toml  popets26-eph-padding.toml  simulate.toml
crates/maybenot-cli/scripts/: df.py  rf.py  vdf.py  vrf.py
crates/maybenot-cli/src/: config.rs  main.rs  storage.rs
crates/maybenot-cli/src/find/: combo.rs  derive.rs  mod.rs  search.rs  tune_rng.rs
crates/maybenot-cli/src/tweak/: budget.rs  eval.rs  fixed.rs  mod.rs  release.rs  sim.rs
crates/maybenot-cli/tests/: integration.rs
crates/maybenot-ffi/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  maybenot-ffi.h  maybenot.h
crates/maybenot-ffi/src/: error.rs  ffi.rs  lib.rs
crates/maybenot-gen/: CHANGELOG.md  Cargo.toml  README.md
crates/maybenot-gen/src/: combo.rs  constraints.rs  dealer.rs  defense.rs  derive.rs  lib.rs  macros.rs  overhead.rs
crates/maybenot-gen/src/environment/: mod.rs  traces.rs
crates/maybenot-gen/src/random_machine/: circpad.rs  default.rs  mod.rs
crates/maybenot-machines/: CHANGELOG.md  Cargo.toml  README.md
crates/maybenot-machines/src/: break_pad.rs  front.rs  interspace.rs  lib.rs  netflow.rs  regulator.rs  scrambler.rs  tamaraw.rs
crates/maybenot-simulator/: CHANGELOG.md  Cargo.toml  README.md
crates/maybenot-simulator/benches/: dists.rs  lookup_bench.rs  rng.rs
crates/maybenot-simulator/src/: delay.rs  integration.rs  lib.rs  linkbundle.rs  linktrace.rs  network.rs  peek.rs  queue.rs  queue_event.rs  queue_peek.rs
crates/maybenot-simulator/tests/: common.rs  create_testlinktraces.sh  example.rs  integration_delay.rs  linktrace.rs  network.rs  network_tracing.rs  simulator.rs
crates/maybenot/src/: action.rs  constants.rs  counter.rs  dist.rs  error.rs  event.rs  framework.rs  lib.rs  machine.rs  parsing.rs  rate_limited_framework.rs  state.rs  time.rs
fuzz/: Cargo.toml  README.md
fuzz/artifacts/: bionomial,id:000000,src:000018+000083,time:43455,execs:576361,op:splice,rep:4  bionomial,id:000000,src:000049,time:1595,execs:25705,op:havoc,rep:1  bionomial,id:000001,src:000049,time:2902,execs:30547,op:havoc,rep:1  bionomial,id:000002,src:000075,time:4280,execs:53296,op:havoc,rep:2  geometric,id-000000,src-000000,time-1023,execs-16,op-havoc,rep-7  geometric,id-000001,src-000002,time-2586,execs-645,op-int16,pos-14,val:+0  geometric,id:000002,src:000002,time:9545,execs:2175,op:havoc,rep:3  geometric,id:000003,src:000002,time:19309,execs:4395,op:havoc,rep:6  machine-str,id-000000,sig-06,sync-binomial-again,src-000002  machine-str,id-000001,sig-06,sync-binomial-again,src-000038  poisson,id-000000,src-000000,time-1051,execs-1886,op-havoc,rep-5  poisson,id-000002,src-000009,time-4942,execs-17364,op-havoc,rep-16  poisson,id-000009,src-000005+000059,time-21292,execs-111246,op-splice,rep-2  poisson,id-000011,src-000009+000061,time-24801,execs-125907,op-splice,rep-13  poisson,id-000015,src-000005,time-37970,execs-253313,op-havoc,rep-16  poisson,id-000017,src-000009+000056,time-47578,execs-377242,op-splice,rep-29  poisson,id:000001,src:000000,time:2121,execs:3297,op:havoc,rep:8  poisson,id:000003,src:000008,time:6197,execs:18527,op:havoc,rep:6  poisson,id:000004,src:000042+000043,time:7542,execs:22931,op:splice,rep:7  poisson,id:000005,src:000012+000023,time:13127,execs:62809,op:splice,rep:2  poisson,id:000006,src:000058,time:14198,execs:63456,op:havoc,rep:8  poisson,id:000007,src:000025+000002,time:17458,execs:88688,op:splice,rep:8  poisson,id:000008,src:000054,time:19691,execs:103602,op:havoc,rep:2  poisson,id:000010,src:000052,time:23053,execs:117337,op:havoc,rep:5  poisson,id:000012,src:000052+000019,time:27294,execs:143045,op:splice,rep:5  poisson,id:000013,src:000025+000062,time:29537,execs:157370,op:splice,rep:2  poisson,id:000014,src:000052,time:32343,execs:177887,op:havoc,rep:1  poisson,id:000016,src:000005,time:41581,execs:301419,op:havoc,rep:10  uniform,id-000003,sig-06,src-000009+000002,time-29455,execs-2157264,op-splice,rep-34  uniform,id:000000,sig:06,src:000000,time:7,execs:303,op:havoc,rep:15  uniform,id:000001,sig:06,src:000001,time:48,execs:3481,op:colorization,rep:2  uniform,id:000002,sig:06,src:000003,time:9977,execs:788634,op:havoc,rep:3
fuzz/fuzz_targets/: maybenot_dist_beta.rs  maybenot_dist_binomial.rs  maybenot_dist_gamma.rs  maybenot_dist_geometric.rs  maybenot_dist_log_normal.rs  maybenot_dist_normal.rs  maybenot_dist_pareto.rs  maybenot_dist_poisson.rs  maybenot_dist_skew_normal.rs  maybenot_dist_uniform.rs  maybenot_dist_weibull.rs  maybenot_machine_string.rs
fuzz/tests/: maybenot_dist_binomial_hang.rs  maybenot_dist_geometric_hang.rs  maybenot_dist_poisson_hang.rs  maybenot_dist_uniform_crash.rs  maybenot_machine_string.rs
src/: action.rs  constants.rs  counter.rs  dist.rs  error.rs  event.rs  framework.rs  lib.rs  machine.rs  parsing.rs  state.rs
tests/: noasync.rs
