[package]
name = "maybenot"
version = "2.0.0"
edition = "2021"
authors = ["Tobias Pulls <tobias@pulls.name>", "Ethan Witwer <ethan@ethanwitwer.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://maybenot.io"
description = "A framework for traffic analysis defenses"
keywords = [ "anonymity", "correlation", "fingerprinting", "privacy", "security" ]
categories = [ "cryptography", "network-programming" ]
repository = "https://github.com/maybenot-io/maybenot"

[features]
default = []
parsing = ["byteorder", "hex"]

[dependencies]
byteorder= {version = "1.5.0", optional = true}
rand="0.8.5"
hex = { version = "0.4.3", optional = true }
rand_distr = "0.4.3"
serde = {version = "1.0.198", features = ["derive"]}
bincode = "1.3.3"
base64 = "0.22.0"
flate2 = "1.0.28"
enum-map = "2.7.3"
sha256 = "1.5.0"
rand_core = "0.6.4"
