[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://maybenot.io"
keywords = [ "anonymity", "correlation", "fingerprinting", "privacy", "security" ]
categories = [ "cryptography", "network-programming" ]
repository = "https://github.com/maybenot-io/maybenot"

[workspace]
resolver = "2"
# Please keep this list topologically sorted by dependency relation, so that
# every crate appears _before_ any other crate that depends on it.
members = [
    # lib for the Maybenot framework
    "crates/maybenot",
    # ffi lib for the Maybenot framework
    "crates/maybenot-ffi",
    # simulator for the Maybenot framework
    "crates/maybenot-simulator",
]

# Keep all lints in sync with `test/Cargo.toml`
[workspace.lints.rust]
# Security
non_ascii_idents = "forbid"

# Deny old style Rust
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"

# Easy to read style and opinionated best practices
explicit_outlives_requirements = "warn"
missing_abi = "deny"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
single_use_lifetimes = "warn"
