[package]
name = "benches"
description = "benchmarks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
maybenot = { path = "../crates/maybenot/" }
maybenot-simulator = { path = "../crates/maybenot-simulator" }
enum-map = "2.7.3"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rand_core = "0.6.4"
ndarray = { version = "0.16", features = ["serde"] }
rayon = "1.10"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "rng"
harness = false

[[bench]]
name = "dists"
harness = false

[[bench]]
name = "lookup_bench"
harness = false