[package]
name = "benches"
description = "benchmarks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
maybenot = { path = "../crates/maybenot/" }
maybenot-simulator = { path = "../crates/maybenot-simulator" }
rand = "0.9"
rand_xoshiro = "0.7"
rand_core = "0.9"

[dev-dependencies]
criterion = "0.5.1"
enum-map = "2.7.3"

[[bench]]
name = "rng"
harness = false

[[bench]]
name = "dists"
harness = false