[package]
name = "maybenot-cli"
version = "1.0.1"
description = "A CLI tool for defense generation using Maybenot"
authors = ["Tobias Pulls <tobias@pulls.name>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "maybenot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
indicatif = { version = "0.18", features = ["rayon"] }
log = "0.4"
maybenot = { version = "2.2.2", path = "../maybenot/" }
maybenot-simulator = { version = "2.2.1", path = "../maybenot-simulator" }
maybenot-gen = { version = "1.0.1", path = "../maybenot-gen" }
maybenot-machines = { version = "1.0.1", path = "../maybenot-machines" }
num_cpus = "1.17"
rand = "0.9"
rand_core = "0.9"
rand_seeder = "0.4"
rand_xoshiro = "0.7"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
statrs = "0.18"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
