[package]
name = "maybenot-ffi"
description = "An FFI wrapper around Maybenot"
version = "1.0.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
maybenot = { version = "1.1.2", path = "../maybenot" }
