[package]
name = "maybenot-ffi"
description = "An FFI wrapper around Maybenot"
version = "2.0.1"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
maybenot = { version = "2.1.0", path = "../maybenot" }
rand = "0.9"
rand_chacha = "0.9"
