[package]
name = "maybenot-gen"
version = "1.0.1"
description = "A library to help generate and evaluate Maybenot defenses"
authors = ["Tobias Pulls <tobias@pulls.name>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
enum-map = "2.7"
log = "0.4"
maybenot = { version = "2.2.1", path = "../maybenot/" }
maybenot-simulator = { version = "2.2.1", path = "../maybenot-simulator" }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
petgraph = "0.8"
rand = "0.9"
rand_core = "0.9"
rand_seeder = "0.4"
rand_xoshiro = "0.7"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
