[package]
name = "maybenot-simulator"
version = "2.0.1"
description = "A simulator for the Maybenot framework"
authors = ["Tobias Pulls <tobias@pulls.name>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# defaults to relative path in workspace
maybenot = { version = "2.0.1", path = "../maybenot/" }
log = "0.4.21"
test-log = "0.2.15"
serde = "1.0.198"
rand = "0.8.5"
serde_json = "1.0.116"
enum-map = "2.7.3"
rand_xoshiro = "0.6.0"
rand_core = "0.6.4"

[dev-dependencies]
env_logger = "0.10.2"
