[package]
name = "maybenot-simulator"
version = "2.1.1"
description = "A simulator for the Maybenot framework"
authors = ["Tobias Pulls <tobias@pulls.name>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# defaults to relative path in workspace
maybenot = { version = "2.2.0", path = "../maybenot/" }
log = "0.4"
rand = "0.9"
serde_json = "1.0"
rand_xoshiro = "0.7"

[dev-dependencies]
enum-map = "2.7"
test-log = "0.2"
rand_core = "0.9"
env_logger = "0.11"
