[package]
name = "maybenot"
version = "1.1.1"
description = "A framework for traffic analysis defenses"
authors = ["Tobias Pulls <tobias@pulls.name>", "Ethan Witwer <ethan@ethanwitwer.com>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
rand="0.8.5"
byteorder="1.4.3"
simple-error = "0.3.0"
hex = "0.4.3"
libflate = "2.0.0"
ring = "0.16.20"
rand_distr = "0.4.3"
serde = {version = "1.0.185", features = ["derive"]}
