[package]
name = "maybenot"
version = "2.1.0"
description = "A framework for traffic analysis defenses"
authors = ["Tobias Pulls <tobias@pulls.name>", "Ethan Witwer <ethan@ethanwitwer.com>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
parsing = ["byteorder", "hex"]

[dependencies]
byteorder= {version = "1.5.0", optional = true}
rand="0.8.5"
hex = { version = "0.4.3", optional = true }
rand_distr = "0.4.3"
serde = {version = "1.0.198", features = ["derive"]}
bincode = "1.3.3"
base64 = "0.22.0"
flate2 = "1.0.28"
enum-map = "2.7.3"
sha256 = {version = "1.5.0", default-features = false}
rand_core = "0.6.4"
