[package]
name = "maybenot"
version = "2.2.1"
description = "A framework for traffic analysis defenses"
authors = ["Tobias Pulls <tobias@pulls.name>", "Ethan Witwer <ethan@ethanwitwer.com>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
rand="0.9"
rand_distr = "0.5"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
base64 = "0.22"
flate2 = "1.0"
enum-map = "2.7"
sha256 = {version = "1.5", default-features = false}
rand_core = "0.9"
